--- a/content/1.index.md
+++ b/content/1.index.md
@@ -10,16 +10,25 @@ title: About
 image: '/alpine-0.webp'
 ---
 #title
-Hi, I am Alpine.
+Hi, on the background thread, :tada: I am editing this file! Where are you ?
 #description
-- An [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://studio.nuxt.com).
+- Awesome  [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://studio.nuxt.com).
 - Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
 - Use [**30+ built-in**](https://elements.nuxt.space) components in your Markdown pages.
 ::
 
+prefixing :D I am editing the description woop woop wowowwow
+We cant see the usernames
+
+![CleanShot 2023-06-15 at 15.10.45@2x.png](/CleanShot%202023-06-15%20at%2015.10.45%402x.png)
+
+It works!!!!
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.  
 
 Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
+
+hola
 
 ::gallery
 ---
