--- a/content/1.index.md
+++ b/content/1.index.md
@@ -10,7 +10,7 @@ title: About
 image: '/alpine-0.webp'
 ---
 #title
-Hi, I am Larbish ! Here with Hey Hey Hey :100: :fire: uppupupupupu
+Hi, I am Larbish ! Yeah here we are collaboration ! 
 #description
 - Awesome  [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://studio.nuxt.com).
 - Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
@@ -24,8 +24,6 @@ Hi, I am Larbish ! Here with Hey Hey Hey :100: :fire: uppupupupupu
 
 Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
 
-hola
-
 ::gallery
 ---
 images:
@@ -34,5 +32,3 @@ images:
   - /alpine-2.webp
 ---
 ::
-
-Here !
