--- a/content/1.index.md
+++ b/content/1.index.md
@@ -10,7 +10,7 @@ title: About
 image: '/alpine-0.webp'
 ---
 #title
-Hi, I am Larbish ! Yeah here we are collaboration ! 
+Hi, I am Larbish ! updating ta rraazaaaaaaaaaaaace
 #description
 - Awesome  [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://studio.nuxt.com).
 - Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
