mess Co-authored-by: smarroufin <marroufin.sylvain@gmail.com>

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -5,6 +5,13 @@ description: An open source blog theme powered by Nuxt.
 title: About
 ---
 
+Bonjour, j'étais en train d'enqueter le bug des collaborators avec son tooltip de mort, dce al as upuufieitr dtea tes morts ca ssuffit 
+tut te
+ calms
+ 
+oui bah non non non non non ! ok ? 
+moi je me déplace ! 
+Bonjour !
 ::hero
 ---
 image: '/alpine-0.webp'
