--- a/content/1.index.md
+++ b/content/1.index.md
@@ -5,19 +5,12 @@ description: An open source blog theme powered by Nuxt.
 title: About
 ---
 
-Bonjour, j'étais en train d'enqueter le bug des collaborators avec son tooltip de mort, dce al as upuufieitr dtea tes morts ca ssuffit 
-tut te
- calms
- 
-oui bah non non non non non ! ok ? 
-moi je me déplace ! 
-Bonjour !
 ::hero
 ---
 image: '/alpine-0.webp'
 ---
 #title
-Hi, you are not more souled!
+Fix on Windows! Looks pretty good !
 #description
 - Awesome  [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://studio.nuxt.com).
 - Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
